--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                             design is thinking <br> made visual
                         </h1>
                         <div class="main-block__buttons">
-                            <a class="main-block__button main-block__button_orange btn">Start Now</a>
-                            <a class="main-block__button main-block__button_white btn">See More</a>
+                            <a href="" class="main-block__button main-block__button_orange btn">Start Now</a>
+                            <a href="" class="main-block__button main-block__button_white btn">See More</a>
                         </div>
                     </div>
                          <!-- <img src="img/main-block/left-top_image.png" class="main-block_image_1" alt="">
